<resources>
    <string name="app_name">MyFarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Input Your credentials to login</string>
    <string name="input_phone">Enter Phone Number</string>
    <string name="input_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_text">Don\'t Have An Account? Sign Up Here.</string>
    <string name="ivan">Ivan Ojok</string>
    <string name="title">Owner</string>
    <string name="transactions">Transactions</string>
    <string name="total_sales">Total Sales:</string>
    <string name="total_purchases">Total Purchases:</string>
    <string name="services">Services</string>
    <string name="animals">Animals</string>
    <string name="worker">Workers</string>
    <string name="sales">Sales</string>
    <string name="purchases">Purchases</string>
    <string name="phone">+256 704253811</string>
    <string name="e_first_name">Enter First Name</string>
    <string name="add_worker">Add Worker</string>
    <string name="e_l_name">Enter Last Name</string>
    <string name="e_title">Enter Title</string>
    <string name="e_gender">Enter Gender</string>
    <string name="e_age">Enter Age</string>
</resources>